fixed width because there was vertical scrolling so having 100vh creates overflow fixed with 100% insteead

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -35,7 +35,7 @@ h1{
 .app{
   font-size: larger;
   height:100vw;
-  width: 100vw;
+  width: 100%;
   color: rgb(43, 43, 43);
   background: rgb(225, 225, 225);
   /* background-image: url('../public/sea.jpg') ; */
@@ -295,4 +295,7 @@ border-style:outset;
 .table-card-header{
   display: flex;
   justify-content: center;
+}
+.link-nav{
+  padding-inline-start: 10px;
 }
